src/predictions/predict.css
.body {
  background-color: #2C2C2E;
  display: flex;
  flex-direction: column;
  height: 100%;
  min-width: 375px;
  min-height: 100vh;
  margin: 0;
  padding: 0;
}

h1 {
  color: #D1D1D1;
  margin: 0;
  order: 0;
  border-bottom: #E5E5E5;
}

h1.upcoming {
  color: #D1D1D1;
  text-align: center;
  padding-top: 15px;
  border-bottom:2px #E5E5E5 solid;
}

main {
  font-style:sans-serif;
  color: #E5E5E5;
  background-color: #2C2C2E;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

menu {
  display: flex;
  flex-direction: row !important;
  list-style: none;
  gap: 20px;
  margin: 0;
  padding: 0;
}

div.user-and-leaderboard {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 15px;
  width: 100%;
  text-align: center;
}

.card {
  display: flex;
  flex-direction: column; 
  text-align: center;
  align-items: center; 
  justify-content: center;
  padding: 20px;
  height: 100%;
}

.card img {
  max-width: 100%; 
  max-height: 40%; 
  object-fit: contain;
}


.leaderboard {
  flex: 1;
  background-color: #0DCAF0 !important;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px;
  border-radius: 25px;
  color: white;
  flex-shrink: 1;
  max-width: 50%;
}


.scores {
  background-color: #0DCAF0 !important;
  padding: 0;
  margin: 0;
  width: 100%;
}


.user {
  flex: none;
  width: auto;
  padding-right: 5px;
  align-items: center;
  display: flex;
  text-align: center;
}


.user-name {
  color: whitesmoke;
  list-style-type: none;
  text-align: center;
  margin: 0;
  padding: 5px 0;
  width: 100%;
}

div.leaderboard ul {
  padding: 0;
  margin: 0;
  width: 100%;
}

h3.leader-title {
  text-align: center;
}

.user h3 {
  margin: 0;
  border: none;
}

.submit {
  background: #0DCAF0; 
  width: 150px;
  height: 40px;
  border: none;
  color: #FFF; 
  border-radius: 6px;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 15px;
  letter-spacing: 1px;
}



footer {
  flex-shrink: 0;
  background-color: #0A0A23;
}

footer a {
  float: right;
}

.container {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-auto-rows: 1fr;
  grid-gap: 1em;
  padding-top: 25px;
}

.image-box {
  margin-bottom: 1em;
  padding: 0.5em;
  border-radius: 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#image img {
  border: 5px solid #E5E5E5;
}

@media (max-height: 768px) {
  main {
    flex: 1 100vh;
  }

    .user-and-leaderboard {
      flex-direction: row;
    }
  
    .user, .leaderboard {
      flex-basis: 50%;
      max-width: 50%;
      text-align: center;
    }

    .user {
      display: flex;
      justify-content: center;
      align-items: center;
      flex: none;
      width: auto;
      padding-right: 5px;
    }

    .leaderboard{
      margin-right: 10px;
  }
}
  

